Fix button padding, alignments and margins

--- a/client/components/navigation-header/style.scss
+++ b/client/components/navigation-header/style.scss
@@ -74,10 +74,10 @@
 		line-height: 20px;
 		letter-spacing: -0.15px;
 
+		display: inline-block;
 		// Hide subtitle text on small screens
-		display: none;
-		@media ( min-width: $break-small ) {
-			display: inline-block;
+		@media ( max-width: $break-small ) {
+			display: none;
 		}
 	}
 
