--- a/client/landing/subscriptions/components/subscriptions-ellipsis-menu/styles.scss
+++ b/client/landing/subscriptions/components/subscriptions-ellipsis-menu/styles.scss
@@ -65,6 +65,8 @@ $rotateOnOpenDeg: 90deg;
 
 .subscriptions-ellipsis-menu {
 	height: 24px;
+	display: flex;
+	align-items: center;
 
 	&__toggle {
 		cursor: pointer;
